@@ -30,6 +30,8 @@ bol_behaviour alternating-first-char
 # Ensures saved files end with a newline character by adding it if necessary.
 eof_newline false
 
+delete_newline_on_delete_to_eol false
+
 # Specifies whether the cursor should be at the end (false) of found text, or the
 # beginning (true).  
 found_cursor_start false
