@@ -599,7 +599,7 @@ class Diakonos
                     end
                 when "context.visible", "context.combined", "eof_newline", "view.nonfilelines.visible",
                         /^lang\.(.+?)\.indent\.(?:auto|roundup|using_tabs)$/,
-                        "found_cursor_start", "convert_tabs"
+                        "found_cursor_start", "convert_tabs", 'delete_newline_on_delete_to_eol'
                     @settings[ command ] = arg.to_b
                 when "context.format", "context.separator.format", "status.format"
                     @settings[ command ] = arg.toFormatting
