@@ -734,12 +734,19 @@ class Buffer
 
         row = @last_row
         col = @last_col
+        
         takeSnapshot
-        retval = [ @lines[ row ][ col..-1 ] ]
-        @lines[ row ] = @lines[ row ][ 0...col ]
+        if @settings[ 'delete_newline_on_delete_to_eol' ] and col == @lines[ row ].size
+          next_line = @lines.delete_at( row + 1 )
+          @lines[ row ] << next_line
+          retval = ''
+        else        
+          retval = [ @lines[ row ][ col..-1 ] ]
+          @lines[ row ] = @lines[ row ][ 0...col ]
+        end
         setModified
 
-        return retval
+        retval
     end
 
     def carriageReturn
